--- a/render.yaml
+++ b/render.yaml
@@ -2,17 +2,9 @@ services:
   - type: web
     name: outlook-email-api
     runtime: docker
-    plan: starter  # Mude para 'hobby' se precisar de mais recursos
+    plan: starter
     dockerfilePath: ./Dockerfile
     dockerContext: .
-    
-    # Configurações de deploy
-    buildFilter:
-      paths:
-        - Dockerfile
-        - package*.json
-        - index.js
-        - "**/*.js"
     
     # Variáveis de ambiente
     envVars:
@@ -24,24 +16,6 @@ services:
         value: "true"
       - key: PORT
         sync: false
-      - key: PLAYWRIGHT_BROWSERS_PATH
-        value: /ms-playwright
-      - key: PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD
-        value: "false"
     
-    # Configurações de saúde
-    healthCheckPath: /health
-    
-    # Configurações de recursos (importante para navegadores)
-    scaling:
-      minInstances: 1
-      maxInstances: 1
-    
-    # Headers de segurança
-    headers:
-      - path: /*
-        name: X-Frame-Options
-        value: DENY
-      - path: /*
-        name: X-Content-Type-Options
-        value: nosniff
+    # Health check
+    healthCheckPath: /ping
